# gencove-cli

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  AGENTS.md  LICENSE  README.md  gencove.spec  mkdocs.yml  pypi_readme.md  pyproject.toml  requirements.txt  requirements_docs.txt  setup.cfg  setup.py  test_map.csv  tox.ini  version-01-upgrade.sh  version-02-tag.sh
.github/workflows/: release.yml  test-release.yml
.gitlab/merge_request_templates/: MR.md
docs/: main.md  support.md
docs/overrides/: main.html
docs/overrides/partials/: footer.html
docs/source/: conf.py  index.rst
docs/source/_ext/: ignore.py
docs/stylesheets/: extra.css
gencove/: __init__.py  cli.py  client.py  collections_extras.py  constants.py  exceptions.py  lib.py  logger.py  models.py  pypi_readme.md  utils.py  version.py
gencove/command/: __init__.py  base.py  common_cli_options.py  download.py  download_old.py  upload.py  upload_old.py  utils.py
gencove/command/basespace/: __init__.py  cli.py
gencove/command/download/: __init__.py  cli.py  constants.py  exceptions.py  main.py  utils.py
gencove/command/explorer/: __init__.py  cli.py
gencove/command/files/: __init__.py  cli.py  main.py  utils.py
gencove/command/projects/: __init__.py  cli.py  list.py  utils.py
gencove/command/reports/: __init__.py  cli.py
gencove/command/s3_imports/: __init__.py  cli.py
gencove/command/sample_manifests/: __init__.py  cli.py
gencove/command/samples/: __init__.py  cli.py
gencove/command/upload/: __init__.py  cli.py  constants.py  exceptions.py  main.py  multi_file_reader.py  (+1 more)
gencove/commands/: download.py  upload.py
gencove/description/: pypi_readme.md
gencove/tests/: .env.dist  __init__.py  conftest.py  decorators.py  filters.py  test_base.py  test_basespace_biosamples_list.py  test_basespace_projects_import.py  test_cli_download.py  test_cli_sync.py  test_cli_upload.py  test_collections_extras.py  test_logger.py  test_projects_batch_get.py  test_projects_batch_types_list.py  test_projects_batches_create.py  test_projects_batches_list.py  test_projects_create_merged_vcf.py  test_projects_get_merged_vcf.py  test_projects_list.py  test_projects_restore_samples.py  test_projects_run_prefix.py  test_projects_samples_list.py  test_projects_status_merged_vcf.py  test_samples_download_file.py  test_samples_get_metadata.py  test_samples_set_metadata.py  test_uploads_list.py  test_utils.py  test_webhook_verify.py  utils.py
gencove/version/: C-patch
(+433 files in other folders)
